# Outbound_station

./: .gitignore  pyproject.toml  requirements.txt
config/: config.yaml
docs/: 任务管理系统.md  出入库工作站-RCS通讯协议V1.0B(杨文成 20260509).xlsx  出库工作站上位机-RCS通信协议V0.1杨文成20260428.md  出库工作站上位机-RCS通信协议V0.1杨文成20260429.md  出库策略设计文档.md  智能分拣软件的功能设计V1.0C（张小欢 20260407.docx  玩觅出入库分拣系统上位机-RCS通信协议V1.0B(杨文成 20260509).xlsx  玩觅出入库分拣系统上位机-RCS通信协议V1.0D(杨文成 20260518).xlsx
src/: main.py
src/business/: outbound_strategy_demo.py  request_handle.py  state_machine.py  strategy.py  task_manager.py  task_processing.py
src/communication/: plc_client.py  plc_client2.py  plc_client_modbus.py  plc_registers.py  plc_service.py  rcs_client.py  rcs_protocol.py  rcs_sever.py  rcs_sever_protocol.py  vision_gate.py  vison_gate.py
src/config/: settings.py
src/exception/: exception.py
src/models/: alarm_model.py  containers.py  outbound_plan_model.py  outbound_task_model.py  plc_data_model.py  station_model.py
src/utils/: logger.py  response.py
tests/: auto_pe.py  exception_test.py  generated_outbound_tasks.json  location_move_test.py  loguru_test.py  plc_simulator.py  put_test.py  put_test_ui.py  rcs_client_simulator.py  rcs_simulator.py  simulator_history.json  strategy_process_demo.py  test_containers.py  test_main.py  test_plc_service.py  test_plc_simulator.py  test_strategy_front_refill.py  test_taskmanger.py  utils_logger_test.py  visual_gate_simulator.py
