[tool.poetry]
name = "outbound_station"
version = "0.1.0"

description = ""

authors = [""]

[tool.poetry.dependencies]
python = "~3.10"
loguru = "^0.7.3"
pyyaml = "^6.0.3"
pymodbus = "3.5.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"